# python-for-everyone

./: CONTRIBUTING.md  README.md  index.html
.claude/: settings.json
.github/scripts/: send_newsletter.py
.github/workflows/: capstone-1-task-api-ci.yml  capstone-2-data-cli-ci.yml  capstone-3-ops-toolkit-ci.yml  capstone-4-finance-tracker-ci.yml  deploy-pages.yml  pages.yml  send-newsletter.yml
assessments/written-exams/: module-1-exam.md  module-2-exam.md  module-3-exam.md  module-4-exam.md
assets/: challenge-engine.js  chapters-data.js  genai-grader.js  playground.js  progress.js  quiz-engine.js  sidebar.js  style.css
capstones/capstone-1-task-api/: .gitignore  README.md  app.py  db.py  pyproject.toml  test_app.py
capstones/capstone-2-data-cli/: README.md  pyproject.toml
capstones/capstone-2-data-cli/datacli/: __init__.py  cli.py  core.py
capstones/capstone-2-data-cli/sample_data/: expenses.csv  sales.csv
capstones/capstone-2-data-cli/tests/: test_cli.py  test_core.py
capstones/capstone-3-ops-toolkit/: README.md  pyproject.toml  requirements.txt
capstones/capstone-3-ops-toolkit/ops/: __init__.py  cli.py  fetch.py  formatting.py  logs.py  scan.py
capstones/capstone-3-ops-toolkit/sample_data/: resume.txt
capstones/capstone-3-ops-toolkit/tests/: test_ops.py
capstones/capstone-4-finance-tracker/: README.md  pyproject.toml  requirements.txt
capstones/capstone-4-finance-tracker/finance_tracker/: __init__.py  cli.py  db.py  models.py  reports.py
capstones/capstone-4-finance-tracker/tests/: conftest.py  test_db.py  test_models.py  test_reports.py
chapters/chapter-01-first-program/: interview-questions.html  interview-questions.md  lesson.html  quiz.html
chapters/chapter-02-variables-data-types/: interview-questions.html  lesson.html  quiz.html
chapters/chapter-03-operators/: interview-questions.html  lesson.html  quiz.html
chapters/chapter-04-control-flow/: interview-questions.html  lesson.html  quiz.html
chapters/chapter-05-loops/: interview-questions.html  lesson.html  quiz.html
chapters/chapter-06-strings-deep-dive/: challenges.html  interview-questions.html  lesson.html  quiz.html
chapters/chapter-07-lists-tuples/: challenges.html  interview-questions.html  lesson.html  quiz.html
chapters/chapter-08-dictionaries-sets/: challenges.html  interview-questions.html  lesson.html  (+1 more)
chapters/chapter-30-cicd-pipelines/project/sample_project/: .gitignore  README.md  pyproject.toml
chapters/chapter-30-cicd-pipelines/project/sample_project/.github/workflows/: ci.yml
chapters/chapter-30-cicd-pipelines/project/sample_project/expense_tracker/: __init__.py  models.py  report.py  tracker.py
chapters/chapter-30-cicd-pipelines/project/sample_project/tests/: test_models.py  test_report.py  test_tracker.py
chapters/chapter-31-professional-python/project/solution/: README.md  pyproject.toml  requirements.txt
chapters/chapter-31-professional-python/project/solution/taskbox/: cli.py  core.py
chapters/chapter-33-interview-career-prep/project/solution/: README.md  pyproject.toml  requirements.txt
chapters/chapter-33-interview-career-prep/project/solution/careerprep/: checklist.py  cli.py  interview.py
docs/: newsletter-template.md
(+503 files in other folders)
