[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "datacli"
version = "1.0.0"
description = "A command-line tool that turns any CSV into totals, top-N breakdowns, and flagged outliers."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
    { name = "Your Name" }
]
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
]

[project.scripts]
datacli = "datacli.cli:main"

[tool.setuptools]
packages = ["datacli"]
