[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "finance-tracker"
version = "1.0.0"
description = "A small OOP personal finance tracker, backed by SQLite, with a real command-line interface."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
    { name = "Your Name" }
]

[project.scripts]
finance = "finance_tracker.cli:main"

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.setuptools]
packages = ["finance_tracker"]
