[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "taskbox"
version = "1.0.0"
description = "A small command-line task manager backed by a JSON file."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
    { name = "Your Name" }
]

[project.scripts]
taskbox = "taskbox.cli:main"

[tool.setuptools]
packages = ["taskbox"]
